[Win] lld-link: error: /manifestdependency: is not allowed in .drectve https://bugs.webkit.org/show_bug.cgi?id=204831

Reviewed by Ross Kirsling.

.:

* Source/cmake/WebKitMacros.cmake (WEBKIT_EXECUTABLE): Added /manifestdependency linkder option if WIN32.

Source/JavaScriptCore:

* shell/DLLLauncherMain.cpp: Removed /manifestdependency for Microsoft.VC80.CRT which seems leftover of Bug 116562 (r178530).

Tools:

* TestWebKitAPI/win/main.cpp:
* win/DLLLauncher/DLLLauncherMain.cpp:

Canonical link: https://commits.webkit.org/222573@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259102 268f45cc-cd09-0410-ab3c-d52691b4dbfc